# krakatau

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  tokens_list.sh
assembler/: main.cpp
include/args/: args.h
include/error/: error_codes.def  error_codes.h
include/function/: bind.h  block.h  callable.h
include/machine/: events.h  slots_handler.h  state.h  tracer.h
include/native/: dll.h  native_operations.h
include/operation/: append.h  arith.h  at.h  base_op.h  bind.h  block.h  break.h  call.h  clear.h  dup.h  equals.h  exec.h  filter.h  find.h  halt.h  iftrue.h  load.h  loadnative.h  loadslot.h  logical.h  loop.h  map.h  native.h  nop.h  op.h  op_loader.h  op_types.def  op_types.h  pack.h  parse.h  pop.h  preconditions.h  push.h  reduce.h  resetstack.h  select.h  size.h  store.h  storeslot.h  swap.h  (+3 more)
include/operations/: append.h  arith.h  at.h  bind.h  block.h  break.h  clear.h  dup.h  equals.h  exec.h  filter.h  halt.h  iftrue.h  load.h  loadslot.h  logical.h  loop.h  map.h  nop.h  op.h  op_loader.h  op_types.def  op_types.h  pack.h  parse.h  pop.h  push.h  reduce.h  resetstack.h  size.h  store.h  storeslot.h  swap.h  typecast.h  typeof.h  unpack.h
include/parser/: header.l  lexer.h  parser.h  token.h  tokens.l  value_tokens.l
include/rtti/: enum.h  rtti.h  visitor.h
include/stack/: stack.h
include/stream/: byte_stream.h  indenting_stream.h  serializer.h  shared_file.h
include/uniq/: uniq.h
include/value/: appendable.h  atom.h  bind.h  block.h  boolean.h  callable.h  character.h  empty.h  equater.h  error.h  findable.h  hasher.h  iterable.h  iterator.h  number.h  operation.h  set.h  string.h  table.h  tuple.h  type.h  typecast_helper.h  value.h  value_loader.h  value_set.h  value_store.h  value_table.h  value_types.def  value_types.h
native/include/time/: krakatau_load.h  now.h
native/src/time/: krakatau_load.cpp  now.cpp
native/time/include/: krakatau_load.h
native/time/src/: krakatau_load.cpp  now.cpp
runner/: main.cpp
src/args/: args.cpp
src/error/: error_codes.cpp
src/function/: bind.cpp  block.cpp  callable.cpp
src/machine/: events.cpp  slots_handler.cpp  state.cpp  tracer.cpp
src/native/: dll.cpp  native_operations.cpp
src/operation/: append.cpp  arith.cpp  at.cpp  bind.cpp  block.cpp  break.cpp  call.cpp  clear.cpp  dup.cpp  equals.cpp  exec.cpp  filter.cpp  find.cpp  halt.cpp  iftrue.cpp  load.cpp  loadnative.cpp  loadslot.cpp  logical.cpp  loop.cpp  map.cpp  native.cpp  nop.cpp  op.cpp  op_loader.cpp  op_loaders.cpp  op_types.cpp  pack.cpp  parse.cpp  pop.cpp  push.cpp  reduce.cpp  resetstack.cpp  select.cpp  size.cpp  store.cpp  storeslot.cpp  swap.cpp  typecast.cpp  typeof.cpp  (+1 more)
src/operations/: append.cpp  arith.cpp  at.cpp  bind.cpp  block.cpp  break.cpp  clear.cpp  dup.cpp  equals.cpp  exec.cpp  filter.cpp  halt.cpp  iftrue.cpp  load.cpp  loadslot.cpp  logical.cpp  loop.cpp  map.cpp  nop.cpp  op.cpp  op_loader.cpp  op_loaders.cpp  op_types.cpp  pack.cpp  parse.cpp  pop.cpp  push.cpp  reduce.cpp  resetstack.cpp  size.cpp  store.cpp  storeslot.cpp  swap.cpp  typecast.cpp  typeof.cpp  unpack.cpp
src/parser/: parser.cpp  token.cpp
src/stack/: stack.cpp
src/stream/: byte_stream.cpp  indenting_stream.cpp  serializer.cpp  shared_file.cpp
src/value/: appendable.cpp  atom.cpp  bind.cpp  block.cpp  boolean.cpp  callable.cpp  character.cpp  empty.cpp  equater.cpp  error.cpp  findable.cpp  hasher.cpp  iterable.cpp  iterator.cpp  number.cpp  operation.cpp  set.cpp  string.cpp  table.cpp  tuple.cpp  type.cpp  value.cpp  value_loader.cpp  value_loaders.cpp  value_set.cpp  value_store.cpp  value_table.cpp  value_types.cpp
test/args/: args.cpp
test/error/: error_codes.cpp
test/function/: bind.cpp  block.cpp  callable.cpp
test/machine/: events.cpp  slots.cpp  state.cpp
test/native/: native_operations.cpp
test/operation/: append.cpp  arith.cpp  at.cpp  bind.cpp  block.cpp  break.cpp  call.cpp  clear.cpp  dup.cpp  equals.cpp  exec.cpp  filter.cpp  find.cpp  halt.cpp  iftrue.cpp  load.cpp  loadslot.cpp  logical.cpp  loop.cpp  map.cpp  nop.cpp  op.cpp  op_loader.cpp  op_types.cpp  pack.cpp  parse.cpp  pop.cpp  push.cpp  reduce.cpp  resetstack.cpp  select.cpp  size.cpp  store.cpp  storeslot.cpp  swap.cpp  typecast.cpp  typeof.cpp  unpack.cpp
test/operations/: append.cpp  arith.cpp  at.cpp  bind.cpp  block.cpp  break.cpp  clear.cpp  dup.cpp  equals.cpp  exec.cpp  filter.cpp  halt.cpp  iftrue.cpp  load.cpp  loadslot.cpp  logical.cpp  loop.cpp  map.cpp  nop.cpp  op.cpp  op_loader.cpp  op_types.cpp  pack.cpp  parse.cpp  pop.cpp  push.cpp  reduce.cpp  resetstack.cpp  size.cpp  store.cpp  storeslot.cpp  swap.cpp  typecast.cpp  typeof.cpp  unpack.cpp
test/parser/: commas.cpp  errors.cpp  lexer.cpp  parser.cpp
test/stack/: stack.cpp
test/stream/: byte_stream.cpp  indenting_stream.cpp  serializer.cpp  shared_file.cpp
test/uniq/: uniq.cpp
test/value/: appendable.cpp  hash.cpp  iterable.cpp  serialize.cpp  value.cpp  value_set.cpp  value_store.cpp  value_table.cpp  value_types.cpp
